@@ -1,0 +1,4 @@
+<?php
+header('HTTP/1.1 500 Internal Server Error');
+?>
+document.getElementById('result').innerHTML = 'FAIL';
